# xmppcd

./: .gitignore  AUTHORS  Makefile.am  README.md  config.h.in  configure.ac  xmppcd.conf.example.in
src/: Makefile.am  conf.c  conf.h  log.c  log.h  main.c  xmpp-send.in
